test/corpus/leniency.txt
==================
an empty file
==================

---

(source_file)

==================
a file holding only a comment
==================

// nothing here yet

---

(source_file
  (comment))

==================
declarations with no schema line
==================

model R {
  a string
}

enum E {
  v
}

---

(source_file
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))))))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_value
        name: (identifier)))))

==================
a mistyped schema keyword stays local to its line
==================

schem shop

model R {
  a string
}

---

(source_file
  (ERROR
    (identifier)
    (identifier))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)))))))

==================
a doc comment and attribute lead the first model when there is no schema line
==================

/// The first model.
@deprecated
model R {
  a string
}

---

(source_file
  (model_declaration
    (doc_comment)
    (attribute
      name: (identifier))
    name: (identifier)
    body: (model_body
      (field
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)))))))
