test/corpus/types.txt
==================
generic types
==================

schema a

model R {
  #1 a map<string, int32>
  #2 b map<string, Line[]>
  #3 c map<int64, Item?>
}

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          arguments: (type_arguments
            (type
              name: (qualified_name
                (identifier)))
            (type
              name: (qualified_name
                (identifier))))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          arguments: (type_arguments
            (type
              name: (qualified_name
                (identifier)))
            (type
              name: (qualified_name
                (identifier))
              (list_suffix)))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          arguments: (type_arguments
            (type
              name: (qualified_name
                (identifier)))
            (type
              name: (qualified_name
                (identifier))
              (nullable))))))))

==================
nullable, lists, and decimal
==================

schema a

model R {
  #1 a string?
  #2 b decimal(19, 4)
  #3 c string[]
  #4 d string?[]
  #5 e string[]?
  #6 f string?[]?
  #7 g string [ ] ?
}

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (nullable)))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          precision: (decimal_arguments
            (integer)
            (integer))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (list_suffix)))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (nullable)
          (list_suffix)))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (list_suffix
            (nullable))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (nullable)
          (list_suffix
            (nullable))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (list_suffix
            (nullable)))))))

==================
qualified type names
==================

schema a

model R {
  #1 a cust.Customer
  #2 b shop.customers.Customer
  #3 c Outer.Inner[]
}

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)
            (identifier))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)
            (identifier)
            (identifier))))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)
            (identifier))
          (list_suffix))))))
